# Network-Anomaly-detector

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: api.py  schemas.py  ws.py
backend/app/inference/: explain.py  model.py
backend/app/replay/: flow_source.py  replay_worker.py
backend/app/services/: incidents_service.py  metrics_service.py  summary_service.py
backend/tests/: test_api.py  test_inference.py  test_replay_worker.py  test_services.py
frontend/: app.js  dashboard.html  predict.html
ml/: features.json  parity_check.py  preprocess.py  preprocessor.json  train.py
ml/artifacts/: label_distribution.json  metrics.json  preprocessor.json  threshold.json
