[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "joblib>=1.5.3",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "lightgbm>=4.7.0",
    "shap>=0.52.0",
    "scikit-learn>=1.6.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
